# Curios

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  README.md  pyproject.toml
.githooks/: pre-commit
cursor/: curios.mdc  hooks-entry.json  install-cursor-config.sh  mcp-entry.json
src/curios/: bm25.py  config.py  indexer.py  install.py  maintain.py  sentinels.py  server.py
src/curios/claude/: curios-append.md
src/curios/cursor/: curios.mdc  keyword-discovery.md  skill.md
tests/: README.md  conftest.py  test_bm25.py  test_cli.py  test_config.py  test_indexer.py  test_install.py  test_integration.py  test_maintain.py  test_mcp_interactions.py  test_queue_and_catchup.py  test_sentinels.py  test_server.py  test_token_savings.py
