[project]
name = "curios"
version = "0.5.3"
description = "Cross-project transcript memory for Cursor IDE"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "jlbgit"}]
keywords = ["cursor", "mcp", "memory", "rag", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0",
    "mcp>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
curios = "curios.install:main"
curios-server = "curios.server:main"
curios-index = "curios.indexer:main"
curios-maintain = "curios.maintain:main"

[project.urls]
Homepage = "https://github.com/jlbgit/Curios"
Repository = "https://github.com/jlbgit/Curios"
Changelog = "https://github.com/jlbgit/Curios/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
# deepeval's pytest plugin buffers all output for its cloud dashboard,
# producing no visible progress during long eval runs. Disable it globally
# since we don't use the Confident AI integration.
# --ignore=tests/eval: eval pipeline is optional (requires deepeval + API keys)
# Live tests auto-skip when prerequisites (CURIOS_DATA, env vars) are missing.
addopts = "-p no:deepeval --ignore=tests/eval"
pythonpath = ["src"]
markers = [
    "config: configuration, redaction, slugs, keywords, env overrides",
    "indexing: transcript parsing, chunking, topics, discovery, queue, catch-up",
    "storage: BM25 FTS5 and sentinels SQLite databases",
    "server: MCP server retrieval helpers and tool handlers",
    "integration: end-to-end synthetic indexing and search",
    "maintenance: prune, build-bm25, status/stats/verify",
    "live: uses real CURIOS_DATA index; run with pytest -m live",
    "benchmark: live-DB token benchmark (subset of live)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
curios = ["cursor/*.mdc", "cursor/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
eval = [
    "deepeval>=3.9",
    "anthropic>=0.40",
]
