[project]
name = "curios"
version = "0.6.4"
description = "Cross-project transcript memory for Cursor IDE and Claude Code"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "jlbgit"}]
keywords = ["cursor", "mcp", "memory", "rag", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0",
    "mcp>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
curios = "curios.install:main"
curios-server = "curios.server:main"

[project.urls]
Homepage = "https://github.com/jlbgit/Curios"
Repository = "https://github.com/jlbgit/Curios"
Changelog = "https://github.com/jlbgit/Curios/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
# deepeval's pytest plugin buffers all output for its cloud dashboard,
# producing no visible progress during long eval runs. Disable it globally
# since we don't use the Confident AI integration.
# --ignore=tests/eval: eval pipeline is optional (requires deepeval + API keys)
# Live/benchmark tests are skipped by default (see tests/conftest.py); use -m live / -m benchmark.
addopts = "-p no:deepeval --ignore=tests/eval"
pythonpath = ["src"]
markers = [
    "config: configuration, redaction, slugs, keywords, env overrides",
    "indexing: transcript parsing, chunking, topics, discovery, queue, catch-up",
    "storage: BM25 FTS5 and sentinels SQLite databases",
    "server: MCP server retrieval helpers and tool handlers",
    "integration: end-to-end synthetic indexing and search",
    "maintenance: prune, build-bm25, status/report/verify/repair",
    "cli: unified curios install.main() argparse routing and export/import smoke",
    "live: real CURIOS_DATA; opt-in with pytest -m live (skipped by default in conftest)",
    "benchmark: live-DB token benchmark; opt-in with pytest -m benchmark (skipped by default)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
curios = ["cursor/*.mdc", "cursor/*.md", "claude/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
eval = [
    "deepeval>=3.9",
    "anthropic>=0.40",
]
